--- a/my-app/src/styles/About.module.css
+++ b/my-app/src/styles/About.module.css
@@ -59,7 +59,7 @@
 /* Feature icons */
 .mindpalSection .icon {
   font-size: 45px;
-  color: rgb(60, 92, 234)/* highlight with your orange brand color */
+  color: rgb(60, 92, 234);/* highlight with your orange brand color */
   margin-bottom: 15px;
 }
 
